# POPUSK

./: README.md  pyproject.toml  settings.yaml
.runtime/logs/: events.jsonl  telemetry.csv
src/teknofest_gcs/: __init__.py  main.py  runtime.py
src/teknofest_gcs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/teknofest_gcs/ai/: __init__.py  processor.py
src/teknofest_gcs/api/: __init__.py  client.py
src/teknofest_gcs/comm/: __init__.py  mavlink.py  simulator.py
src/teknofest_gcs/config/: default.yaml  settings.py
src/teknofest_gcs/core/: models.py  sim.py
src/teknofest_gcs/geo/: __init__.py  planner.py  zones.py
src/teknofest_gcs/logging/: __init__.py  service.py
src/teknofest_gcs/mission/: __init__.py  fsm.py  planning.py
src/teknofest_gcs/ui/: calibration.py  hud_widgets.py  main_window.py  map_view.py
src/teknofest_gcs/ui/assets/: styles.qss
src/teknofest_gcs/ui/assets/map/: app.js  index.html  styles.css
src/teknofest_gcs/video/: __init__.py  service.py
tests/: test_api_payload.py  test_fsm.py  test_swarm_model.py  test_swarm_sim.py  test_zones.py
